muleplapeli/src/main/resources/api/examples/errors/403.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "FORBIDDEN"
      level: error
      description: "Bad OAuth request (wrong consumer key, bad nonce, expired timestamp...)"